Remove the Undo closed window entry from the manager before opening the closed window.

BUG: 301974
REVIEW: 114780
FIXED-IN: 4.12.1